# Smart-India-Hackathon

./: app.py  feedback.csv  pyproject.toml
Sentiment-analysis/: app.py
Sentiment-analysis/static/: acts.css  base.css  login.css
Sentiment-analysis/templates/: acts.html  base.html  home.html  login.html
feedback/: app.py  feedback.csv
feedback/static/: style.css
feedback/templates/: index.html  layout.html
mca-sentiment-analysis/: .env
mca-sentiment-analysis/data/: live_comments.csv
mca-sentiment-analysis/src/: api.py  app.py
static/: acts.css  base.css  econsultation.css  home.css  login.css
templates/: acts.html  base.html  econsultation.html  home.html  login.html
wordcloud/hackathon/: cloud.py
wordcloud/hackathon/static/: comments.csv
wordcloud/hackathon/templates/: index.html
