[tool.poetry]
name = "mca-sentiment-analysis"
version = "0.1.0"
description = "AI-powered sentiment analysis for MCA eConsultation feedback."
authors = ["RUSHAB3979 <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12, <3.14"
gradio = "5.44.1"
pandas = "^2.2.2"
torch = "^2.3.0"
transformers = "^4.40.1"
python-dotenv = "^1.0.1"
wordcloud = "^1.9.3"
# Pillow and Matplotlib are removed - they will be installed automatically.
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
jupyter = "^1.0.0"
notebook = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"